# Myth-of-Manna

./: .gitignore  CMakeLists.txt  README.md  design.txt
src/: action.cpp  action.h  cp_437.h  doom_fire.h  engine.cpp  engine.h  entity.cpp  entity.h  entity_factory.h  entity_types.h  event.h  game_exceptions.h  logging.cpp  logging.h  main.cpp  main.h  mapgen.cpp  mapgen.h  palette.h  procgen.h  render.cpp  render.h  rendering.cpp  rendering.h  scene.cpp  scene.h  scene_comp.h  state_handling.cpp  state_handling.h  tile.cpp  tile.h  tile_types.h  validate.h
src/components/: ai.h  base_component.h  description.h  group.h  heal.h  inventory.cpp  inventory.h  open.h  physics.h  render.h  stats.h  template.h  world.h
